# DaikinTest

./: CMakeLists.txt
DaikinTest/: CMakeLists.txt  DaikinTest.cpp  DaikinTest.h  control.cpp
GTest_DaikinTest/: GTest_DaikinTest.vcxproj  test.cpp
